# eo-api

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  DEMO.md  Dockerfile  Makefile  ORCHESTRATION_DECISION.md  PRD.md  PREFECT_INTEGRATION.md  PRESENTATION.md  PRESENTATION_EXECUTIVE.md  README.md  ROADMAP.md  XCLIM_INTEGRATION.md  compose.ghcr.yml  compose.yml  constants.py  main.py  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  requirements.txt
.cache/state/: jobs.json  schedules.json  workflows.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
aggregate/: api.py  pipeline.py  preprocess.py  spatial.py  temporal.py  units.py
config/pygeoapi/: base.yml
data/datasets/: chirps3.yaml  era5_land.yaml  worldpop.yaml
data/workflows/: dhis2_datavalue_set.yaml  dhis2_datavalue_set_without_temporal_aggregation.yaml
datasets/: README.md  api.py  cache.py  chirps-daily.yaml  era5-land-daily.yaml  preprocess.py  raster.py  registry.py  serialize.py  units.py  utils.py
datasets/registry/: README.md  era5_land.yaml  worldpop.yaml
docs/: architecture.md  dhis2-ogc-mapping-spec.md  dhis2_pipeline_milestones.md  ingestion_artifact_api_guide.md  ingestion_dataset_api_guide.md  library_responsibility_matrix.md  ogc-migration-plan.md  ogcapi.md  pipeline-summary.md  prefect.md  processing_api.md  workflow-orchestration.md
eoapi/: datasets.py  dhis2_integration.py  external_ogc.py  jobs.py  scheduler_runtime.py  schedules.py  state_store.py  workflows.py
plugins/: aggregation.py  dhis2eo.py  dhis2orgUnits.py
scripts/: run_chirps3_pipeline_with_geojson.py  validate_dataset_registry.py  validate_datasets.py
tests/: conftest.py  test_chirps3_provider.py  test_chirps3_workflow.py  test_collections_federation.py  test_conformance_endpoint.py  test_coverages_federation.py  test_data_accessor.py  test_dataset_capabilities.py  test_datasets.py  test_dhis2_adapter.py  test_dhis2_common.py  test_edr_endpoint.py  test_endpoint_errors.py  test_era5_land.py  test_external_ogc_config.py  test_features_endpoint.py  test_generic_dhis2_workflow.py  test_landing_page.py  test_pipeline_e2e.py  test_pipelines.py  test_preview_collection_query.py  test_preview_store_backend.py  test_processes_endpoint.py  test_processing_registry.py  test_processing_service.py  test_publications.py  test_raster_routes.py  test_root.py  test_scheduler_runtime.py  test_schedules_endpoint.py  test_state_store.py  test_workflow_architecture.py  test_workflow_scaffold.py  test_workflows.py  test_workflows_endpoint.py  test_worldpop_dhis2_workflow.py  test_worldpop_sync.py  test_worldpop_to_dhis2.py  test_zonal_statistics.py
webapp/: app.js  index.html  styles.css
(+228 files in other folders)
